# http-observatory

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
database/: __init__.py  database.py  schema.sql
httpobs/: Dockerfile  __init__.py  requirements.txt
httpobs/conf/: .env  __init__.py  amazon-rds.pem  hsts-preload.json  httpobs.conf
httpobs/conf/bypasses/: angular.json  flash.json  jsonp.json
httpobs/database/: .dockerignore  Dockerfile  __init__.py  celeryconfig.py  database.py  requirements.txt  schema.sql  schema.sql.docker.sql  tasks.py
httpobs/docs/: api.md  contribute.json  faq.md  scoring.md
httpobs/scanner/: __init__.py  celeryconfig.py  local.py  main.py  requirements.txt  scanner.py  tasks.py  utils.py
httpobs/scanner/analyzer/: __init__.py  content.py  decorators.py  headers.py  misc.py  utils.py
httpobs/scanner/grader/: __init__.py  grade.py  utils.py
httpobs/scanner/retriever/: __init__.py  retriever.py  utils.py
httpobs/scripts/: httpobs  httpobs-database-beat  httpobs-local-scan  httpobs-mass-scan  httpobs-regen-hsts-preload  httpobs-scan-alexa.py  httpobs-scan-worker  scan.py
httpobs/tests/: utils.py
httpobs/tests/unittests/: test_content.py  test_csp_parser.py  test_environ.py  test_grades.py  test_headers.py  test_misc.py  test_parse_http_equiv_headers.py  test_preload.py  test_retriever.py  test_sanitize_headers.py  test_valid_hostname.py
httpobs/tests/unittests/files/: test_content_sri_data_uri.html  test_content_sri_impl_external_http.html  test_content_sri_impl_external_https1.html  test_content_sri_impl_external_https2.html  test_content_sri_impl_external_noproto.html  test_content_sri_impl_sameorigin.html  test_content_sri_no_scripts.html  test_content_sri_notimpl_external_http.html  test_content_sri_notimpl_external_https.html  test_content_sri_notimpl_external_noproto.html  test_content_sri_sameorigin1.html  test_content_sri_sameorigin2.html  test_content_sri_sameorigin3.html  test_parse_http_equiv_headers_case_insensitivity.html  test_parse_http_equiv_headers_csp1.html  test_parse_http_equiv_headers_csp2.html  test_parse_http_equiv_headers_csp_multiple_http_equiv1.html  test_parse_http_equiv_headers_referrer1.html
httpobs/website/: __init__.py  api.py  api_v2.py  common.py  decorators.py  main.py  monitoring.py  requirements.txt  utils.py
httpobs/website/backend/: __init__.py  api.py
httpobs/website/frontend/: __init__.py  api.py
scanner/: __init__.py  tasks.py
scanner/analyzer/: __init__.py  headers.py  misc.py
scanner/grader/: __init__.py  grade.py
scanner/retriever/: __init__.py
tools/: mozilla-sites.txt
website/: main.py
website/backend/: __init__.py  api.py
